<resources>
    <string name="app_name">Student Calendar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calendrier Etudiant</string>
    <string name="nav_header_subtitle">Bordeaux - Bio-infoformatique</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_planning">Planning</string>
    <string name="nav_web">Accès au site</string>
    <string name="nav_parameter">Paramètres</string>

    <string name="action_refresh_saving">Actualiser/Sauvegarder</string>

    <string name="hours_start_end">%s - %s</string>
    <string name="date_event">%s\n%s</string>
    <string name="notes_event">note(s) : %s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="close">Fermer</string>
    <string name="save">Sauvegarder</string>
    <string name="load_data">Chargement des données &#8230;</string>
    <string name="rename_group_hint">Renommer le groupe</string>
    <string name="settings_title">Mes préférences</string>
    <string name="settings_group">Paramètrage des groupes</string>
    <string name="settings_group_legendary">Vous pouvez sélectionner ou déselectionner les groupes que vous souhaitez voir affichés.\nVous pouvez également renommer les groupes.</string>
    <string name="settings_primary_group">Paramètrage des groupes primaires</string>
    <string name="settings_select_master">Sélectionnez votre master</string>
    <string name="settings_select_master1">master 1</string>
    <string name="settings_select_master2">master 2</string>
    <string name="settings_select_master1_message">"master 1 sélectionné, veuillez recharger le calendrier pour la bonne prise en compte.</string>
    <string name="settings_select_master2_message">"master 2 sélectionné, veuillez recharger le calendrier pour la bonne prise en compte.</string>
    <string name="settings_alarm_choose_time">Temps entre votre réveil et l\'arrivée à votre fac</string>
    <string name="active_all_groups">Activer tout les groupes</string>
    <string name="disable_all_groups">Désactiver tout les groupes</string>
    <string name="settings_reset_groups">Réinitilisation des groupes</string>
    <string name="dialog_reset_group_title">Réinitialisation des groupes</string>
    <string name="dialog_reset_group_message">En réinitialisant tout les groupes, le renommage et la visibilité des groupes seront remis à zéro.\nSouhaitez-vous toujours réinitialiser les groupes ?</string>
    <string name="reset">Réinitialiser</string>
    <string name="cancel">Annuler</string>
    <string name="time_format">%02d:%02d</string>

    <string name="adding_task_title">Nouvel évênement</string>
    <string name="new_task_information">Informations sur l\'évênement</string>
    <string name="new_task_title_hint">Nom de l\'évênement *</string>
    <string name="new_task_date_hint">Date de l\'évênement *</string>
    <string name="new_task_hours_start_hint">Heure de début *</string>
    <string name="new_task_hours_end_hint">Heure de fin *</string>
    <string name="new_task_comment_hint">Ajouter un commentaire</string>
    <string name="new_task_place_hint">Bâtiment/Salle *</string>
    <string name="new_task_save">Sauvegarder</string>
    <string name="new_task_added">Ajouter</string>
    <string name="new_task_error">Erreur : Un des champs obligatoires n\'est pas rempli.</string>
</resources>
