<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_planning"
                android:icon="@drawable/ic_planning"
                android:title="@string/nav_planning"/>
        <item
                android:id="@+id/nav_week"
                android:icon="@drawable/ic_week"
                android:title="@string/nav_week"/>

        <item
                android:id="@+id/nav_web"
                android:icon="@drawable/ic_web"
                android:title="@string/nav_web"/>

        <item
                android:id="@+id/nav_parameter"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_parameter"/>
    </group>
</menu>
