<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="@color/colorPrimaryDark">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/adding_task_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"/>

        <ImageView
                android:id="@+id/dialog_close"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_close"
                android:tint="@android:color/white"
                android:padding="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="15dp"/>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/new_event_save"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/new_task_information"
                        android:textSize="16sp"
                        android:textColor="@color/dark_grey"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:passwordToggleDrawable="@drawable/ic_close">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_event_title"
                            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:hint="@string/new_task_title_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/new_event_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:textSize="14sp"
                            android:focusable="false"
                            android:hint="@string/new_task_date_hint"
                            tools:text="lund. 22 dec 2018"/>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                        <EditText
                                android:id="@+id/new_event_hours_start"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="14sp"
                                android:clickable="true"
                                android:focusable="false"
                                android:hint="@string/new_task_hours_start_hint"/>

                        <EditText
                                android:id="@+id/new_event_hours_end"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="14sp"
                                android:clickable="true"
                                android:focusable="false"
                                android:hint="@string/new_task_hours_end_hint"/>

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:passwordToggleDrawable="@drawable/ic_close">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_event_place"
                            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:hint="@string/new_task_place_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:passwordToggleDrawable="@drawable/ic_close">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_event_note"
                            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:hint="@string/new_task_comment_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <Button
                android:id="@+id/new_event_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="25dp"
                android:paddingStart="25dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/new_task_added"/>

    </RelativeLayout>

</LinearLayout>